gccida/c1/lookup_cfa
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lookup_cfa/src/dwarf2out.c:1084:12: error: expected expression
*( _OWORD *)&loc->offset = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lookup_cfa/src/dwarf2out.c:1084:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&loc->offset = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lookup_cfa/src/obj/dwarf2out.o] Error 1
